--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,29 @@
+/* * {
+	border: 1px dashed red;
+} */
+
 body {
+	margin: 0px;
 	background-color: bisque;
 	display: flex;
 	justify-content: center;
+	font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+		"Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+.container {
+	display: flex;
+	width: 100%;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.categoryButtons {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
 }
 
 .categoryButtons > button {
@@ -23,4 +45,50 @@ body {
 
 .categoryButtons > .viewMore {
 	color: black;
+	font-size: 12px;
+}
+
+.header {
+	display: flex;
+	flex-direction: column;
+	width: 100vw;
+	background-size: cover;
+	align-items: center;
+	background-image: url(./assets/bitmap.png);
+	color: whitesmoke;
+}
+
+.header > h1 {
+	margin: 10px 0 0 0;
+}
+
+.search-bar {
+	width: 25%;
+	background-color: transparent;
+	border: 2px solid whitesmoke;
+	margin-bottom: 10px;
+	color: white;
+}
+
+.search-bar::placeholder {
+	color: white;
+	text-align: center;
+	font-size: 9px;
+}
+
+.jokeDiv {
+	background-color: white;
+	width: 200px;
+	height: 220px;
+	padding: 10px;
+	margin: 10px;
+	border-radius: 5px;
+	box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+	overflow-y: auto;
+}
+
+.jokeElements {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
 }
